content/v1.3.0/zh/api/core-extra/MBBindingList.md
---
title: "MBBindingList"
---
<!-- BEGIN BREADCRUMB -->
**首页** → **API 目录** → **本领域** → `MBBindingList`
- [← 本领域 / 返回 core-extra](./)
- [↑ API 目录](../)
- [🏠 首页 v1.3.0](../../)
- [⭐ 版本架构](../../architecture/)
<!-- END BREADCRUMB -->
# MBBindingList

**Namespace:** TaleWorlds.Library
**Module:** TaleWorlds.Library
**Type:** `public class MBBindingList<T> : Collection<T>, IMBBindingList, IList, ICollection, IEnumerable`
**Base:** `Collection<T>`
**File:** `TaleWorlds.Library/MBBindingList.cs`

## 概述

`MBBindingList` 位于 `TaleWorlds.Library`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.Library` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要属性

| Name | Signature |
|------|-----------|
| `ListChanged` | `public event ListChangedEventHandler ListChanged { get; }` |

## 主要方法

### Sort
`public void Sort()`

**用途 / Purpose:** 处理 `sort` 相关逻辑。

### Sort
`public void Sort(IComparer<T> comparer)`

**用途 / Purpose:** 处理 `sort` 相关逻辑。

### IsOrdered
`public bool IsOrdered(IComparer<T> comparer)`

**用途 / Purpose:** 处理 `is ordered` 相关逻辑。

### ApplyActionOnAllItems
`public void ApplyActionOnAllItems(Action<T> action)`

**用途 / Purpose:** 将 `action on all items` 应用到当前对象。

## 使用示例

```csharp
MBBindingList example = MBBindingList.ListChanged;
```

## 参见

- [完整类目录](../catalog)